--- a/Demo/wwwroot/index.html
+++ b/Demo/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>FusionTools</title>
-    <base href="/" />
+    <base href="/FusionTools/Demo" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="FusionTools.styles.css" rel="stylesheet" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
@@ -14,7 +14,30 @@
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
     <!--FontAwesome 5-->
 </head>
-
+<script>
+    var base = document.getElementsByTagName('base')[0];
+    if (window.location.hostname == 'localhost') {
+        base.setAttribute('href', '/');
+    } 
+</script>
+<script>
+    (function (l) {
+        if (l.search) {
+            var q = {};
+            l.search.slice(1).split('&').forEach(function (v) {
+                var a = v.split('=');
+                q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+            });
+            if (q.p !== undefined) {
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + (q.p || '') +
+                    (q.q ? ('?' + q.q) : '') +
+                    l.hash
+                );
+            }
+        }
+    }(window.location))
+</script>
 <body>
     <div id="app">Loading...</div>
 
